--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -52,6 +52,6 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
-        android:src="@drawable/fab_plus" />
+        app:srcCompat="@drawable/fab_plus" />
 
 </android.support.design.widget.CoordinatorLayout>
