--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -50,28 +50,28 @@
         <item name="android:fontFamily">Roboto</item>
         <item name="android:textColor">@color/textcolor</item>
         <item name="android:textStyle">normal</item>
-        <item name="android:textSize">15dp</item>
+        <item name="android:textSize">17sp</item>
     </style>
 
     <style name="DetailViewTextSmall">
         <item name="android:fontFamily">Roboto</item>
         <item name="android:textColor">@color/textcolor</item>
         <item name="android:textStyle">normal</item>
-        <item name="android:textSize">10dp</item>
+        <item name="android:textSize">12sp</item>
     </style>
 
     <style name="DetailViewTextMedium">
         <item name="android:fontFamily">Roboto</item>
         <item name="android:textColor">@color/textcolor</item>
         <item name="android:textStyle">normal</item>
-        <item name="android:textSize">12dp</item>
+        <item name="android:textSize">15sp</item>
     </style>
 
     <style name="DetailViewTextMediumBlack">
         <item name="android:fontFamily">Roboto</item>
         <item name="android:textColor">@android:color/black</item>
         <item name="android:textStyle">normal</item>
-        <item name="android:textSize">12dp</item>
+        <item name="android:textSize">15sp</item>
     </style>
 
 </resources>
