--- a/app/src/main/res/layout/activity_tvshow.xml
+++ b/app/src/main/res/layout/activity_tvshow.xml
@@ -140,7 +140,7 @@
                         android:orientation="horizontal">
 
                         <ImageView
-                            android:id="@+id/movie_poster"
+                            android:id="@+id/tvshow_poster"
                             android:layout_width="@dimen/movie_details_image_layout_width"
                             android:layout_height="@dimen/movie_details_image_layout_height"
                             android:src="@drawable/no_movie_poster"
