--- a/app/src/main/res/layout/activity_tvshow.xml
+++ b/app/src/main/res/layout/activity_tvshow.xml
@@ -171,7 +171,28 @@
                             <LinearLayout
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
-                                android:layout_marginTop="5dp"
+                                android:orientation="horizontal">
+
+                                <TextView
+                                    android:id="@+id/text_language"
+                                    style="@style/DetailViewTextSmall"
+                                    android:layout_width="0dp"
+                                    android:layout_weight="1"
+                                    android:layout_height="wrap_content"
+                                    android:gravity="left"
+                                    android:text="@string/languages"/>
+                                <TextView
+                                    android:id="@+id/status"
+                                    style="@style/DetailViewTextSmall"
+                                    android:layout_width="0dp"
+                                    android:layout_weight="1"
+                                    android:layout_height="wrap_content"
+                                    android:gravity="left"
+                                    android:text="@string/status" />
+                            </LinearLayout>
+                            <LinearLayout
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
                                 android:orientation="horizontal">
                                 <TextView
                                     android:id="@+id/movie_duration"
@@ -182,34 +203,13 @@
                                     android:gravity="left"
                                     android:text="@string/movie_duration" />
                                 <TextView
-                                    android:id="@+id/text_language"
-                                    style="@style/DetailViewTextSmall"
-                                    android:layout_width="0dp"
-                                    android:layout_weight="1"
-                                    android:layout_height="wrap_content"
-                                    android:gravity="left" />
-                            </LinearLayout>
-                            <LinearLayout
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:orientation="horizontal">
-                                <TextView
-                                    android:id="@+id/movie_date"
-                                    style="@style/DetailViewTextSmall"
-                                    android:layout_width="0dp"
-                                    android:layout_weight="1"
-                                    android:layout_height="wrap_content"
-                                    android:gravity="left" />
-
-                                <TextView
-                                    android:id="@+id/status"
+                                    android:id="@+id/imdb_id"
                                     style="@style/DetailViewTextSmall"
                                     android:layout_width="0dp"
                                     android:layout_weight="1"
                                     android:layout_height="wrap_content"
                                     android:gravity="left"
-                                    android:text="@string/status"
-                                    android:visibility="gone" />
+                                    android:text="@string/imdb_id" />
                             </LinearLayout>
                             <LinearLayout
                                 android:layout_width="match_parent"
@@ -235,6 +235,14 @@
                             </LinearLayout>
 
                             <TextView
+                                android:id="@+id/movie_date"
+                                style="@style/DetailViewTextSmall"
+                                android:layout_width="0dp"
+                                android:layout_weight="1"
+                                android:layout_height="wrap_content"
+                                android:gravity="left" />
+
+                            <TextView
                                 android:id="@+id/homepage"
                                 style="@style/DetailViewTextSmall"
                                 android:layout_width="wrap_content"
@@ -250,14 +258,6 @@
                                 android:gravity="center_vertical"
                                 android:layout_marginTop="5dp"
                                 android:text="@string/prodution_companies" />
-
-                            <TextView
-                                android:id="@+id/imdb_id"
-                                style="@style/DetailViewTextSmall"
-                                android:layout_width="wrap_content"
-                                android:layout_height="match_parent"
-                                android:gravity="center_vertical"
-                                android:text="@string/imdb_id" />
 
                         </LinearLayout>
                     </LinearLayout>
