--- a/app/src/main/res/layout/activity_tvshow.xml
+++ b/app/src/main/res/layout/activity_tvshow.xml
@@ -195,43 +195,42 @@
                                 android:layout_height="wrap_content"
                                 android:orientation="horizontal">
                                 <TextView
-                                    android:id="@+id/movie_duration"
+                                    android:id="@+id/first_air_date"
                                     style="@style/DetailViewTextSmall"
                                     android:layout_width="0dp"
                                     android:layout_weight="1"
                                     android:layout_height="wrap_content"
                                     android:gravity="left"
-                                    android:text="@string/movie_duration" />
+                                    android:text="@string/date" />
                                 <TextView
-                                    android:id="@+id/imdb_id"
+                                    android:id="@+id/last_air_date"
                                     style="@style/DetailViewTextSmall"
                                     android:layout_width="0dp"
                                     android:layout_weight="1"
                                     android:layout_height="wrap_content"
                                     android:gravity="left"
-                                    android:text="@string/imdb_id" />
+                                    android:text="@string/date" />
                             </LinearLayout>
                             <LinearLayout
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:orientation="horizontal">
                                 <TextView
-                                    android:id="@+id/budget"
+                                    android:id="@+id/num_seasons"
                                     style="@style/DetailViewTextSmall"
                                     android:layout_width="0dp"
                                     android:layout_weight="1"
                                     android:layout_height="wrap_content"
                                     android:gravity="left"
-                                    android:text="@string/budget"/>
-
+                                    android:text="@string/seasons" />
                                 <TextView
-                                    android:id="@+id/revenue"
+                                    android:id="@+id/num_episodes"
                                     style="@style/DetailViewTextSmall"
                                     android:layout_width="0dp"
                                     android:layout_weight="1"
                                     android:layout_height="wrap_content"
                                     android:gravity="left"
-                                    android:text="@string/revenue" />
+                                    android:text="@string/episodes"/>
                             </LinearLayout>
 
                             <TextView
