Add Favorite TV Shows menu option
- Add Favorite EV Shows menu option to the sliding menu
- Renamed classes

--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -59,6 +59,10 @@
                     android:id="@+id/nav_on_the_air_tv_shows"
                     android:icon="@drawable/ic_menu_slideshow"
                     android:title="@string/menu_option_on_the_air" />
+                <item
+                    android:id="@+id/nav_favorite_tv_shows"
+                    android:icon="@drawable/ic_favorite_black_24dp"
+                    android:title="@string/menu_option_favorites" />
             </group>
         </menu>
     </item>
