--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -17,6 +17,11 @@
 <menu
     xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <item
+        android:id="@+id/nav_movies"
+        android:icon="@drawable/ic_local_movies_black_24dp"
+        android:title="@string/menu_option_movies" />
+
     <item android:title="@string/menu_title_movies">
         <menu>
             <group android:checkableBehavior="single">
