--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -17,30 +17,20 @@
 <menu
     xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item
-        android:id="@+id/nav_movies"
-        android:icon="@drawable/ic_local_movies_black_24dp"
-        android:title="@string/menu_option_movies" />
+    <group android:checkableBehavior="single">
+        <item
+            android:id="@+id/nav_movies"
+            android:icon="@drawable/ic_local_movies_black_24dp"
+            android:title="@string/menu_option_movies" />
+        <item
+            android:id="@+id/nav_tv_shows"
+            android:icon="@drawable/ic_tv_black_24dp"
+            android:title="@string/menu_option_tv_shows" />
+    </group>
 
     <item android:title="@string/menu_title_movies">
         <menu>
             <group android:checkableBehavior="single">
-                <item
-                    android:id="@+id/nav_top_rated_movies"
-                    android:icon="@drawable/ic_star_black_24dp"
-                    android:title="@string/menu_option_top_rated" />
-                <item
-                    android:id="@+id/nav_upcomming_movies"
-                    android:icon="@drawable/ic_local_play_black_24dp"
-                    android:title="@string/menu_option_upcomming" />
-                <item
-                    android:id="@+id/nav_now_playing_movies"
-                    android:icon="@drawable/ic_menu_slideshow"
-                    android:title="@string/menu_option_now_playing" />
-                <item
-                    android:id="@+id/nav_popular_movies"
-                    android:icon="@drawable/ic_movie_filter_black_24dp"
-                    android:title="@string/menu_option_popular" />
                 <item
                     android:id="@+id/nav_favorite_movies"
                     android:icon="@drawable/ic_favorite_black_24dp"
@@ -52,18 +42,6 @@
     <item android:title="@string/menu_title_tv_shows">
         <menu>
             <group android:checkableBehavior="single">
-                <item
-                    android:id="@+id/nav_popular_tv_shows"
-                    android:icon="@drawable/ic_movie_filter_black_24dp"
-                    android:title="@string/menu_option_popular" />
-                <item
-                    android:id="@+id/nav_top_rated_tv_shows"
-                    android:icon="@drawable/ic_star_black_24dp"
-                    android:title="@string/menu_option_top_rated" />
-                <item
-                    android:id="@+id/nav_on_the_air_tv_shows"
-                    android:icon="@drawable/ic_menu_slideshow"
-                    android:title="@string/menu_option_on_the_air" />
                 <item
                     android:id="@+id/nav_favorite_tv_shows"
                     android:icon="@drawable/ic_favorite_black_24dp"
