--- a/app/src/main/res/layout/image_layout.xml
+++ b/app/src/main/res/layout/image_layout.xml
@@ -23,7 +23,7 @@
         android:id="@+id/poster_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@drawable/no_movie_poster"
+        android:background="@drawable/disk_reel"
         android:scaleType="fitXY" />
 
     <TextView
