Add empty home page

--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -19,6 +19,10 @@
 
     <group android:checkableBehavior="single">
         <item
+            android:id="@+id/nav_home"
+            android:icon="@drawable/ic_home_black_24dp"
+            android:title="@string/menu_option_home" />
+        <item
             android:id="@+id/nav_movies"
             android:icon="@drawable/ic_local_movies_black_24dp"
             android:title="@string/menu_option_movies" />
