Move common methods to FragmentUtils

--- a/app/src/main/res/layout/custom_error_view.xml
+++ b/app/src/main/res/layout/custom_error_view.xml
@@ -25,10 +25,10 @@
         android:padding="@dimen/activity_horizontal_margin">
 
     <ImageView
-            android:layout_width="150dp"
-            android:layout_height="150dp"
+            android:layout_width="125dp"
+            android:layout_height="125dp"
             app:srcCompat="@drawable/ic_error_outline_black_24dp"
-            android:tint="@color/colorGray"/>
+            android:tint="@color/colorRed"/>
 
     <TextView
             android:id="@+id/error_text"
