--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -22,7 +22,7 @@
 
     <color name="colorBackground">#4f8293</color>
 
-    <color name="movie_details_text_color">#c63b3b</color>
+    <color name="colorRed">#F44336</color>
     <color name="textcolor">#024c61</color>
     <color name="textcolorPrimary">#fde4a9</color>
     <color name="textcolorSec">#8f2626</color>
