Make url homepages links

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -27,4 +27,5 @@
     <color name="textcolorPrimary">#fde4a9</color>
     <color name="textcolorSec">#8f2626</color>
     <color name="trailerColor">#E8EAF6</color>
+    <color name="colorLink">#0000FF</color>
 </resources>
