--- a/app/src/main/res/layout/activity_tvshow.xml
+++ b/app/src/main/res/layout/activity_tvshow.xml
@@ -247,7 +247,9 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="match_parent"
                                 android:gravity="center_vertical"
-                                android:text="@string/homepage" />
+                                android:text="@string/homepage"
+                                android:autoLink="web"
+                                android:textColorLink="@color/colorLink"/>
 
                             <TextView
                                 android:id="@+id/prod_companies"
