--- a/app/src/main/res/layout/activity_person.xml
+++ b/app/src/main/res/layout/activity_person.xml
@@ -17,7 +17,6 @@
 <android.support.design.widget.CoordinatorLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/main_content"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true">
@@ -60,7 +59,6 @@
 
 
     <android.support.v4.widget.NestedScrollView
-        android:id="@+id/nested_scroll_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
@@ -93,7 +91,6 @@
                     android:gravity="center_vertical" />
 
                 <TextView
-                    android:id="@+id/imdb_text_rating"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:layout_marginLeft="15dp"
@@ -141,7 +138,7 @@
                             android:id="@+id/personal_image"
                             android:layout_width="@dimen/movie_details_image_layout_width"
                             android:layout_height="@dimen/movie_details_image_layout_height"
-                            android:src="@drawable/disk_reel"
+                            app:srcCompat="@drawable/disk_reel"
                             android:layout_marginBottom="1dp" />
 
                         <LinearLayout
@@ -238,7 +235,6 @@
                         android:verticalSpacing="@dimen/movie_guide_gridview_vertical_spacing" />
 
                     <TextView
-                        android:id="@+id/credit_cast_title"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="@string/cast"
@@ -251,7 +247,6 @@
                         android:orientation="vertical" />
 
                     <TextView
-                        android:id="@+id/credit_crew_title"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="@string/crew"
